src/objects/QuoteDetails__c.object
<CustomObject>
    <description>Quote information with amounts rolled up to products/platforms/services.</description>
    <fields>
        <fullName>AlertAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total quote amount for Alert</description>
        <label>Loyalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnalyticsLicenseType__c</fullName>
        <label>Analytics License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnalyticsTerm__c</fullName>
        <label>Analytics Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BIAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total quote amount for BI.</description>
        <label>Analytics Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloudAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cloud Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloudLicenseType__c</fullName>
        <label>Cloud License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Term__c</fullName>
        <label>Cloud Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_Approved_By__c</fullName>
        <label>Configuration Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Approved_On__c</fullName>
        <label>Configuration Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Configuration_Submitted_By__c</fullName>
        <label>Configuration Submitted By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Submitted_On__c</fullName>
        <label>Configuration Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConsultingLicenseType__c</fullName>
        <label>Consulting License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsultingTerm__c</fullName>
        <label>Consulting Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_SKUs__c</fullName>
        <label>Consulting SKUs</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI_ID__c</fullName>
        <label>DSI ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSI_Name__c</fullName>
        <label>DSI Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI_desc__c</fullName>
        <label>DSI Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EducationLicenseType__c</fullName>
        <label>Education License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EducationTerm__c</fullName>
        <label>Education Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FeeAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FeeLicenseType__c</fullName>
        <label>Fee License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FeeTerm__c</fullName>
        <label>Fee Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstYearMxAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total quote amount for first year maintenance</description>
        <label>First Year Mx Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstYearMxLicenseType__c</fullName>
        <label>First Year Mx License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstYearMxTerm__c</fullName>
        <label>First Year Mx Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdentityLicenseType__c</fullName>
        <label>Identity License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentityTerm__c</fullName>
        <label>Identity Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Approved_By__c</fullName>
        <label>Legal Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Approved_On__c</fullName>
        <label>Legal Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Assigned_On__c</fullName>
        <label>Legal Assigned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Assigned_To__c</fullName>
        <label>Legal Assigned To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(&quot;https://mstr.my.salesforce.com/&quot; &amp; Id, QuoteId__c)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoyaltyLicenseType__c</fullName>
        <label>Loyalty License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoyaltyTerm__c</fullName>
        <label>Loyalty Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total quote amount for mobile.</description>
        <label>Mobile Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MobileLicenseType__c</fullName>
        <label>Mobile License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobileTerm__c</fullName>
        <label>Mobile Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiation_Status_Assigned_To__c</fullName>
        <formula>IF(
  OR(
   AND(ISPICKVAL(Negotiation_Status__c,&quot;Legal Review&quot;),
   ISBLANK(Legal_Assigned_To__c)
   ),
   AND(ISPICKVAL(Negotiation_Status__c,&quot;RevRec Review&quot;),
   ISBLANK(Rev_Rec_Assigned_To__c)
   )
   ),
  &quot;Not Assigned&quot;,
  IF(
    AND(ISPICKVAL(Negotiation_Status__c,&quot;Legal Review&quot;),
    NOT(ISBLANK(Legal_Assigned_To__c))
    ),
    Legal_Assigned_To__c,
      IF(
      AND(ISPICKVAL(Negotiation_Status__c,&quot;RevRec Review&quot;),
      NOT(ISBLANK(Rev_Rec_Assigned_To__c))
      ),
      Rev_Rec_Assigned_To__c,
      IF(ISPICKVAL(Negotiation_Status__c,&quot;Field Review&quot;),
      Opportunity__r.Owner.Shortened_Full_Name__c,
&apos;-&apos;
)
)
)
)</formula>
        <label>Negotiation Status Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiation_Status_Comments_History__c</fullName>
        <label>Negotiation Status Comments History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Negotiation_Status_Duration__c</fullName>
        <formula>IF(
ISPICKVAL(Negotiation_Status__c,&quot;Negotiation Closed&quot;),
null,
NOW() - Negotiation_Status_Last_Modified_Date__c
)</formula>
        <label>Negotiation Status Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiation_Status_Last_Modified_Date__c</fullName>
        <label>Negotiation Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Negotiation_Status__c</fullName>
        <label>Negotiation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Review</fullName>
                </value>
                <value>
                    <fullName>Legal Review</fullName>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Negotiation Closed</fullName>
                </value>
                <value>
                    <fullName>RevRec Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEMAddOnAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>OEM Add-On Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OEMAddOnLicenseType__c</fullName>
        <label>OEM Add-On License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEMAddOnTerm__c</fullName>
        <label>OEM Add-On Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity is the master record for all quote details</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Details</relationshipLabel>
        <relationshipName>QuoteDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OtherAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total quote amount for other services</description>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherLicenseType__c</fullName>
        <label>Other License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherTerm__c</fullName>
        <label>Other Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PremiumMxAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Premium Mx Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PremiumMxLicenseType__c</fullName>
        <label>Premium Mx License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PremiumMxTerm__c</fullName>
        <label>Premium Mx Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the quote is selected as a primary quote</description>
        <label>Primary Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the quote is executed</description>
        <label>Quote Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteExecutionDate__c</fullName>
        <description>Execution date for the quote (sent by Quote system) - not displayed on Salesforce UI</description>
        <label>Quote Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <description>Quote id from Quote system</description>
        <externalId>true</externalId>
        <label>Quote Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Details_Action__c</fullName>
        <description>The field is used to create a link to view the quote within the MicroStrategy Quote System.</description>
        <formula>HYPERLINK(&quot;https://portal.microstrategy.com/Quote/Main.aspx?p=SearchResult&amp;mode=15&amp;title=Matched Quotes&amp;searchCriteria=&quot; &amp;QuoteId__c, &quot;View Quote&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Details Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_Approved_By__c</fullName>
        <label>Rev Rec Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_Assigned_On__c</fullName>
        <label>Rev Rec Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rev_Rec_Assigned_To__c</fullName>
        <label>Rev Rec Assigned To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBCF_Consulting_Total__c</fullName>
        <formula>Opportunity__r.SBCF_Gross_Consulting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consulting Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBCF_Education_Total__c</fullName>
        <formula>Opportunity__r.Gross_Education__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Education Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBCF_Software_Total__c</fullName>
        <formula>Opportunity__r.Gross_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBCF_Support_Total__c</fullName>
        <formula>Opportunity__r.Gross_Maintenance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServicesAmountConsulting__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Quote amount for consulting services</description>
        <label>Services Amount (Consulting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServicesAmountEducation__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Quote amount for education services</description>
        <label>Services Amount (Education)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServicesAmount__c</fullName>
        <description>Total quote amount for services (sum of consulting and education services)</description>
        <formula>ServicesAmountConsulting__c +  ServicesAmountEducation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of quote version.</description>
        <inlineHelpText>The current status of quote version.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Revision Required</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Replaced By New Version</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Previously Approved</fullName>
                </value>
                <value>
                    <fullName>Agreement Executed</fullName>
                </value>
                <value>
                    <fullName>Agreement Discarded</fullName>
                </value>
                <value>
                    <fullName>Approved:  Rider Required</fullName>
                </value>
                <value>
                    <fullName>Rider / Revenue Review Requested</fullName>
                </value>
                <value>
                    <fullName>Approved:  Rider Completed</fullName>
                </value>
                <value>
                    <fullName>Revenue Review Completed</fullName>
                </value>
                <value>
                    <fullName>Under Negotiation</fullName>
                </value>
                <value>
                    <fullName>Negotiation Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalQuoteAmount__c</fullName>
        <description>The sum of all TCVs for a quote.</description>
        <inlineHelpText>The sum of all TCVs for a quote.</inlineHelpText>
        <label>Total Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of quote created for an opportunity.</description>
        <inlineHelpText>The type of quote created for an opportunity.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Maintenance Renewal</fullName>
                </value>
                <value>
                    <fullName>Platinum Service</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Maintenance Upgrade</fullName>
                </value>
                <value>
                    <fullName>DSI Adjustment</fullName>
                </value>
                <value>
                    <fullName>Master License Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Starter Kit</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Online Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsherAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total quote amount for Usher</description>
        <label>Identity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Quote Details</label>
    <listViews>
        <fullName>All_Quote_Details</fullName>
        <columns>View__c</columns>
        <columns>QuoteId__c</columns>
        <columns>Opportunity__c</columns>
        <columns>TotalQuoteAmount__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Quote__c</columns>
        <columns>QuoteExecuted__c</columns>
        <columns>DSI_ID__c</columns>
        <columns>DSI_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Configuration_Submitted_On__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quote Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Quote-{0000000000}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Non_Negative_Quote_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 

AlertAmount__c&lt;0, ISBLANK(AlertAmount__c), 
BIAmount__c&lt;0, ISBLANK(BIAmount__c),
FirstYearMxAmount__c&lt;0, ISBLANK(FirstYearMxAmount__c),
MobileAmount__c&lt;0, ISBLANK(MobileAmount__c),
OtherAmount__c&lt;0, ISBLANK(OtherAmount__c), 
ServicesAmountConsulting__c&lt;0, ISBLANK(ServicesAmountConsulting__c),
ServicesAmountEducation__c&lt;0, ISBLANK(ServicesAmountEducation__c),
UsherAmount__c&lt;0, ISBLANK(UsherAmount__c) )</errorConditionFormula>
        <errorMessage>Quote amount cannot contain a blank or negative value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Not_Editable</fullName>
        <active>true</active>
        <description>Opportunity should not be edited after creation, except for users assigned to System Administrator, Sales Operations, and Integration User</description>
        <errorConditionFormula>AND ( NOT(ISNEW()), ISCHANGED( Opportunity__c ), $Profile.Name != &apos;Sales Operations&apos;, $Profile.Name != &apos;System Administrator&apos;, $Profile.Name != &apos;Integration User&apos;, $Profile.Name != &apos;MSTR Limited System Admin&apos;)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Opportunity cannot be updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_Id_is_not_editable</fullName>
        <active>true</active>
        <description>Users should not be able to edit quote id</description>
        <errorConditionFormula>AND ( NOT(ISNEW()), ISCHANGED(QuoteId__c), $Profile.Name != &apos;Sales Operations&apos;, $Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>QuoteId__c</errorDisplayField>
        <errorMessage>Quote Id cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_Name_Not_Editable</fullName>
        <active>true</active>
        <description>Quote name should not be edited after creation</description>
        <errorConditionFormula>AND ( NOT(ISNEW()), ISCHANGED(Name), $Profile.Name != &apos;Sales Operations&apos;, $Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Quote Name cannot be updated</errorMessage>
    </validationRules>
</CustomObject>